# fjam

./: .gitignore  Cargo.toml  docker-compose.yml
convert/: Cargo.toml
convert-derive/: Cargo.toml
convert-derive/src/: lib.rs
convert/src/: errors.rs  lib.rs
fjam-derive/: Cargo.toml
fjam-derive/src/: lib.rs
migrations/2018-10-09-195239_user_profile/: down.sql  up.sql
migrations/2018-10-20-163126_use_user_profile/: up.sql
src/: auth_middleware.rs  config.rs  lib.rs  main.rs  middlewares.rs  postgres_connection.rs  routes.rs  schema.rs
src/common/: common_api_errors.rs  error_dto.rs  mod.rs
src/test_utils/: files_utils.rs  mod.rs  server_utils.rs  state.rs
src/user/: core.rs  create.rs  create_new_user.rs  dto.rs  email_manager.rs  errors.rs  handler.rs  mod.rs  models.rs  new_user_handler.rs  password_manager.rs  route.rs  validations.rs
src/user/test_utils/: mod.rs
src/user/tests/: mod.rs  user_profile_tests.rs
