[package]
name = "fjam"
version = "0.0.1"
authors = ["Andriy Kovalov <andy.kovv@gmail.com>"]

[dependencies]
gotham = "0.3.0"
gotham_derive = "0.3.0"
borrow-bag = "0.4.0"

log = "0.4.5"
dotenv = "0.13.0"

diesel = { version = "1.3.3", features = ["postgres"] }
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
bcrypt = "0.2"
lazy_static = "1.1.0"
syn = "0.15.15"
rmp-serde = "0.13.7"

hyper = "0.12"
mime = "0.3"
futures = "0.1"
serde = "1"
serde_json = "1.0"
serde_derive = "1"
quote = "0.6"
regex = "1.0.6"

fjam-derive = {path = "./fjam-derive"}
convert = { path = "./convert" }