[package]
name = "convert-derive"
version = "0.1.0"
authors = ["Andriy Kovalov <andy.kovv@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15.15", features = ["full", "extra-traits"] }
quote = "0.6"

serde = "1"
serde_json = "1.0"
serde_derive = "1"
rmp-serde = "0.13.7"